<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="br.com.hpedroni.previsaotempo.ClimappSplashSreenActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"
        android:contentDescription="@string/background" />


    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/clima_app"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/seu_clima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/seu_clima_local"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/seu_clima"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/e_de_londres"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>
