<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.hpedroni.climapp.Fragments.ClimappFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />



        <TextView
            android:id="@+id/local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:text="@string/cidade"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/local"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:text="@string/graus_teste"
            android:textSize="60sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/container_umidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/umidade"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/umidade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/vinte_porcento_teste"

                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carregando"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:textSize="30sp"
            android:visibility="invisible"
            />


</RelativeLayout>

